--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clsnx",
   "version": "1.0.0",
   "description": "An ultra-light ESNext approach for conditionally joining classNames together; inspired by JedWatson's classnames. ",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
