fix: scope the package name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clsnx",
+  "name": "@becks256/clsnx",
   "version": "1.0.0",
   "description": "An ultra-light ESNext approach for conditionally joining classNames together; inspired by JedWatson's classnames. ",
   "main": "src/index.js",
