fix: correct documentation accuracy and package configuration
- Fix package.json main field to point to dist/index.js instead of src/index.js
- Add types field and files array for proper npm publishing
- Remove misleading memory efficiency percentage claims
- Replace specific but unverifiable claims with accurate qualitative statements
- Fix git repository URL consistency throughout documentation
- Correct performance claims to focus on bundle size advantages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@becks256/clsnx",
   "version": "1.1.0",
   "description": "Ultra-lightweight (537B gzipped) CSS class utility with built-in deduplication - 19% smaller than classnames with superior functionality.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "test": "vitest",
